[metadata]
license_file = LICENSE
name = backports.ast_unparse
author = Batuhan Taskaya
author_email = batuhan@python.org
description = Backport of ast.unparse from 3.9
long_description = file:README.rst
url = https://github.com/isidentical/backports.ast_unparse
version = 0.1.0

[options]
packages = find:
python_requires = >=3.6
